[gd_scene load_steps=3 format=3 uid="uid://c8q2g4k3y6d8v"]

[ext_resource type="Script" path="res://scripts/victory_screen.gd" id="1_victory"]
[ext_resource type="FontFile" uid="uid://x0e778lvoftj" path="res://toby_platformer_assets/fonts/PixelOperator8-Bold.ttf" id="2_font"]

[node name="VictoryScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_victory")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.2, 0.1, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="VictoryLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.9, 0.2, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 64
text = "VICTORY!"
horizontal_alignment = 1

[node name="ScoreContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="CoinsLabel" type="Label" parent="VBoxContainer/ScoreContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9, 0, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 32
text = "Coins: 0"
horizontal_alignment = 1

[node name="SlimesLabel" type="Label" parent="VBoxContainer/ScoreContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.2, 0.8, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 32
text = "Slimes Defeated: 0"
horizontal_alignment = 1

[node name="MenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 48
text = "Back to Menu" 